Fix delta text wrapping when it shouldn't

--- a/resources/sass/pages/powerwash.scss
+++ b/resources/sass/pages/powerwash.scss
@@ -12,6 +12,7 @@
     .delta {
         font-weight: 600;
         color: #73be73;
+        white-space: nowrap;
     }
     .minus {
         letter-spacing: -2px;
